Use DALi 2 libraries by default, only fallback to old libs to build
Change-Id: Ia39d4cdd25b77cbc1380908daf5b59b7858c6758

--- a/daliview/src/main/cpp/CMakeLists.txt
+++ b/daliview/src/main/cpp/CMakeLists.txt
@@ -18,9 +18,16 @@ else()
 endif()
 
 if (EXISTS "${DALI_ENV_DIR}")
-  pkg_check_modules(DALI_CORE dali-core REQUIRED NO_CMAKE_PATH NO_CMAKE_ENVIRONMENT_PATH)
-  pkg_check_modules(DALI_ADAPTOR dali-adaptor REQUIRED NO_CMAKE_PATH NO_CMAKE_ENVIRONMENT_PATH)
-  pkg_check_modules(DALI_TOOLKIT dali-toolkit NO_CMAKE_PATH NO_CMAKE_ENVIRONMENT_PATH)
+  pkg_check_modules(DALI_VERSION_TEST QUIET dali2-core dali2-adaptor dali2-toolkit)
+  if(DALI_VERSION_TEST_FOUND)
+    pkg_check_modules(DALI_CORE dali2-core REQUIRED NO_CMAKE_PATH NO_CMAKE_ENVIRONMENT_PATH)
+    pkg_check_modules(DALI_ADAPTOR dali2-adaptor REQUIRED NO_CMAKE_PATH NO_CMAKE_ENVIRONMENT_PATH)
+    pkg_check_modules(DALI_TOOLKIT dali2-toolkit REQUIRED NO_CMAKE_PATH NO_CMAKE_ENVIRONMENT_PATH)
+  else()
+    pkg_check_modules(DALI_CORE dali-core REQUIRED NO_CMAKE_PATH NO_CMAKE_ENVIRONMENT_PATH)
+    pkg_check_modules(DALI_ADAPTOR dali-adaptor REQUIRED NO_CMAKE_PATH NO_CMAKE_ENVIRONMENT_PATH)
+    pkg_check_modules(DALI_TOOLKIT dali-toolkit REQUIRED NO_CMAKE_PATH NO_CMAKE_ENVIRONMENT_PATH)
+  endif()
 else()
   message(WARNING "${DALI_ENV_DIR} not found!")
 endif()
