Pass in ANDROID_ABI env var when cleaning
Change-Id: I1c8aa4989a862941b53528f810c892aaa11b2ad3

--- a/daliview/build.gradle
+++ b/daliview/build.gradle
@@ -109,6 +109,7 @@ task cleanDaliEnv(type:Delete) {
 }
 
 task cleanDaliDependencies(type:Exec) {
+    environment "ANDROID_ABI", androidABI
     workingDir file(daliDir + '/android-dependencies/cmake').getAbsolutePath()
     commandLine 'sh',  './buildall.sh', 'clean'
 }
