--- a/daliview/build.gradle
+++ b/daliview/build.gradle
@@ -6,6 +6,7 @@ def daliDir = System.getenv('DALI_DIR')
 def daliEnvDir = System.getenv('DALI_ENV_DIR')
 
 android {
+    namespace = "com.sec.daliview"
     signingConfigs {
         release {
             storeFile file('../key.jks')
@@ -72,15 +73,15 @@ android {
         }
     }
     compileOptions {
-        targetCompatibility = 1.6
-        sourceCompatibility = 1.6
+        targetCompatibility = 1.8
+        sourceCompatibility = 1.8
     }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:appcompat-v7:+'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
