--- a/daliview/build.gradle
+++ b/daliview/build.gradle
@@ -15,10 +15,10 @@ android {
             keyPassword 'samsung'
         }
     }
-    compileSdkVersion 28
+    compileSdkVersion 30
     defaultConfig {
         minSdkVersion 26
-        targetSdkVersion 26
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
         externalNativeBuild {
@@ -68,8 +68,8 @@ android {
     }
     externalNativeBuild {
         cmake {
-            version '3.10.2'
-            path "src/main/cpp/CMakeLists.txt"
+            version '3.22.1'
+            path 'src/main/cpp/CMakeLists.txt'
         }
     }
     compileOptions {
@@ -90,7 +90,7 @@ dependencies {
 task buildDaliDependencies(type:Exec) {
     environment "PREFIX", daliEnvDir
     environment "ANDROID_ABI", androidABI
-    environment "ANDROID_PLATFORM", "26"
+    environment "ANDROID_PLATFORM", "latest"
     if (buildType == 'debug')
         environment "DEBUG", "1"
     workingDir file(daliDir + '/android-dependencies/cmake').getAbsolutePath()
